versions/v2.9/modules/en/pages/cluster-deployment/custom-clusters/custom-clusters.adoc
= Launching Kubernetes on Existing Custom Nodes
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/index.adoc 
:product-path: cluster-deployment/custom-clusters/custom-clusters.adoc
:description: To create a cluster with custom nodes, you’ll need to access servers in your cluster and provision them according to Rancher requirements
ifeval::["{build-type}" != "community"]
:xref-node-reqs: xref:cluster-deployment/node-requirements.adoc
:xref-use-windows-clusters: xref:cluster-deployment/custom-clusters/windows/use-windows-clusters.adoc
:xref-access-cluster-kubectl: xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-clean-cluster-nodes: xref:cluster-admin/manage-clusters/clean-cluster-nodes.adoc
:xref-k8s-concepts: xref:about-rancher/concepts.adoc
:xref-rancher-agent-options: xref:cluster-deployment/custom-clusters/rancher-agent-options.adoc
:xref-production-checklist: xref:cluster-deployment/production-checklist/production-checklist.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-use-windows-clusters: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/use-windows-clusters/index.adoc
:xref-node-reqs: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/node-requirements-for-rancher-managed-clusters.adoc
:xref-access-cluster-kubectl: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-clean-cluster-nodes: xref:how-to-guides/new-user-guides/manage-clusters/clean-cluster-nodes.adoc
:xref-k8s-concepts: xref:reference-guides/kubernetes-concepts.adoc
:xref-rancher-agent-options: xref:reference-guides/cluster-configuration/rancher-server-configuration/use-existing-nodes/rancher-agent-options.adoc
:xref-production-checklist: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/checklist-for-production-ready-clusters/index.adoc
endif::[]

When you create a custom cluster, Rancher uses RKE (the Rancher Kubernetes Engine) to create a Kubernetes cluster in on-prem bare-metal servers, on-prem virtual machines, or in any node hosted by an infrastructure provider.

To use this option you'll need access to servers you intend to use in your Kubernetes cluster. Provision each server according to the {xref-node-reqs}[requirements], which includes some hardware specifications and Docker. After you install Docker on each server, you willl also run the command provided in the Rancher UI on each server to turn each one into a Kubernetes node.

This section describes how to set up a custom cluster.

== Creating a Cluster with Custom Nodes

[NOTE]
.Want to use Windows hosts as Kubernetes workers?
====

See {xref-use-windows-clusters}[Configuring Custom Clusters for Windows] before you start.
====


=== 1. Provision a Linux Host

Begin creation of a custom cluster by provisioning a Linux host. Your host can be:

* A cloud-host virtual machine (VM)
* An on-prem VM
* A bare-metal server

If you want to reuse a node from a previous custom cluster, {xref-clean-cluster-nodes}[clean the node] before using it in a cluster again. If you reuse a node that hasn't been cleaned, cluster provisioning may fail.

Provision the host according to the {xref-node-reqs}[installation requirements] and the {xref-production-checklist}[checklist for production-ready clusters.]

If you're using Amazon EC2 as your host and want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] when provisioning the host.

=== 2. Create the Custom Cluster

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Click *Custom*.
. Enter a *Cluster Name*.
. Use *Cluster Configuration* section to choose the version of Kubernetes, what network provider will be used and if you want to enable project network isolation. To see more cluster options, click on *Show advanced options*.
+

[NOTE]
.Using Windows nodes as Kubernetes workers?
====

 ** See {xref-use-windows-clusters}[Enable the Windows Support Option].
 ** The only Network Provider available for clusters with Windows support is Flannel.

+
====

+

[NOTE]
.Dual-stack on Amazon EC2:
====
If you're using Amazon EC2 as your host and want to use the https://kubernetes.io/docs/concepts/services-networking/dual-stack/[dual-stack] feature, there are additional https://rancher.com/docs/rke//latest/en/config-options/dual-stack#requirements[requirements] when configuring RKE.
====


. Click *Next*.
. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. From *Node Role*, choose the roles that you want filled by a cluster node. You must provision at least one node for each role: `etcd`, `worker`, and `control plane`. All three roles are required for a custom cluster to finish provisioning. For more information on roles, see {xref-k8s-concepts}#_roles_for_nodes_in_kubernetes_clusters[this section.]

[NOTE]
====

* Using Windows nodes as Kubernetes workers? See {xref-use-windows-clusters}[this section].
* Bare-Metal Server Reminder: If you plan on dedicating bare-metal servers to each role, you must provision a bare-metal server for each role (i.e. provision multiple bare-metal servers).
====


. *Optional*: Click *{xref-rancher-agent-options}[Show advanced options]* to specify IP address(es) to use when registering the node, override the hostname of the node, or to add https://kubernetes.io/docs/concepts/overview/working-with-objects/labels/[labels] or https://kubernetes.io/docs/concepts/configuration/taint-and-toleration/[taints] to the node.
. Copy the command displayed on screen to your clipboard.
. Log in to your Linux host using your preferred shell, such as PuTTy or a remote Terminal connection. Run the command copied to your clipboard.

[NOTE]
====

Repeat steps 7-10 if you want to dedicate specific hosts to specific node roles. Repeat the steps as many times as needed.
====


. When you finish running the command(s) on your Linux host(s), click *Done*.

*Result:*

Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.

You can access your cluster after its state is updated to *Active*.

*Active* clusters are assigned two Projects:

* `Default`, containing the `default` namespace
* `System`, containing the `cattle-system`, `ingress-nginx`, `kube-public`, and `kube-system` namespaces

=== 3. Amazon Only: Tag Resources

If you have configured your cluster to use Amazon as *Cloud Provider*, tag your AWS resources with a cluster ID.

https://docs.aws.amazon.com/AWSEC2/latest/UserGuide/Using_Tags.html[Amazon Documentation: Tagging Your Amazon EC2 Resources]

[NOTE]
====

You can use Amazon EC2 instances without configuring a cloud provider in Kubernetes. You only have to configure the cloud provider if you want to use specific Kubernetes cloud provider functionality. For more information, see https://github.com/kubernetes/website/blob/release-1.18/content/en/docs/concepts/cluster-administration/cloud-providers.md[Kubernetes Cloud Providers]
====


The following resources need to be tagged with a `ClusterID`:

* *Nodes*: All hosts added in Rancher.
* *Subnet*: The subnet used for your cluster
* *Security Group*: The security group used for your cluster.

[NOTE]
====

Do not tag multiple security groups. Tagging multiple groups generates an error when creating Elastic Load Balancer.
====


The tag that should be used is:

----
Key=kubernetes.io/cluster/<CLUSTERID>, Value=owned
----

`<CLUSTERID>` can be any string you choose. However, the same string must be used on every resource you tag. Setting the tag value to `owned` informs the cluster that all resources tagged with the `<CLUSTERID>` are owned and managed by this cluster.

If you share resources between clusters, you can change the tag to:

----
Key=kubernetes.io/cluster/CLUSTERID, Value=shared
----

== Optional Next Steps

After creating your cluster, you can access it through the Rancher UI. As a best practice, we recommend setting up these alternate ways of accessing your cluster:

* *Access your cluster with the kubectl CLI:* Follow {xref-access-cluster-kubectl}#_accessing_clusters_with_kubectl_from_your_workstation[these steps] to access clusters with kubectl on your workstation. In this case, you will be authenticated through the Rancher server's authentication proxy, then Rancher will connect you to the downstream cluster. This method lets you manage the cluster without the Rancher UI.
* *Access your cluster with the kubectl CLI, using the authorized cluster endpoint:* Follow {xref-access-cluster-kubectl}#_authenticating_directly_with_a_downstream_cluster[these steps] to access your cluster with kubectl directly, without authenticating through Rancher. We recommend setting up this alternative method to access your cluster so that in case you can't connect to Rancher, you can still access the cluster.
